# Hugin

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/hugin/: __init__.py  __main__.py  cover_letter_cli.py  hh_cli.py  resume_cli.py  resume_improvement_cli.py  screening_cli.py
src/hugin/adapters/: credentials.py  hh_browser.py  resume_documents.py  yandex_ai.py  yandex_credentials.py
src/hugin/api/: app.py
src/hugin/api/routes/: health.py
src/hugin/core/: settings.py
src/hugin/database/: __init__.py  cli.py  engine.py  models.py  schema.py
src/hugin/database/migrations/: env.py
src/hugin/database/migrations/versions/: 0001_baseline.py  0002_core_entities.py  0003_queue_and_states.py  0004_directions_and_resumes.py  0005_vacancy_details.py  0006_v03_states.py  0007_v03_data_model.py  0008_resume_import.py  0009_vacancy_collection.py  0010_queue_policy.py  0011_cover_letter_generation.py
src/hugin/domain/: __init__.py  applications.py  content.py  directions.py  hh.py  resumes.py  state_machines.py  tasks.py  time.py  vacancies.py
src/hugin/repositories/: __init__.py  applications.py  directions.py  tasks.py  vacancies.py
src/hugin/services/: __init__.py  application_automation.py  career_directions.py  cover_letter.py  hh_login.py  hh_profile.py  job_search.py  queue.py  resume_improvement.py  resume_profile.py  resume_prompts.py  screening_forms.py  vacancy_analysis.py  vacancy_duplicates.py  vacancy_review.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_application_automation.py  test_career_directions.py  test_cover_letter.py  test_cover_letter_cli.py  test_credentials.py  test_database.py  test_directions.py  test_health.py  test_hh_browser.py  test_hh_cli.py  test_hh_login.py  test_main.py  test_queue.py  test_repositories.py  test_resume_cli.py  test_resume_documents.py  test_resume_import.py  test_resume_improvement.py  test_resume_improvement_cli.py  test_resume_prompts.py  test_screening_cli.py  test_screening_forms.py  test_settings.py  test_state_machines.py  test_v03_data_model.py  test_vacancy_analysis.py  test_vacancy_collection.py  test_yandex_ai.py  test_yandex_credentials.py
