[project]
name = "hugin-job-agent"
version = "0.1.0"
description = "Локальный персональный агент поиска работы"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.116,<1",
    "keyring>=25.6,<26",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.10,<3",
    "pypdf>=6.14,<7",
    "python-docx>=1.2,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.52,<2",
]

[project.scripts]
hugin = "hugin.__main__:main"
hugin-db = "hugin.database.cli:main"
hugin-hh = "hugin.hh_cli:main"
hugin-resume = "hugin.resume_cli:main"
hugin-resume-improve = "hugin.resume_improvement_cli:main"
hugin-letters = "hugin.cover_letter_cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.17,<2",
    "playwright>=1.52,<2",
    "pre-commit>=4.2,<5",
    "pytest>=8.4,<10",
    "pytest-cov>=6.2,<8",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hugin"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
    "/uv.lock",
    "/.env.example",
    "/.dockerignore",
    "/.pre-commit-config.yaml",
    "/.python-version",
    "/compose.yaml",
    "/Dockerfile",
    "/Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/hugin/adapters/resume_documents.py" = ["RUF001"]
"src/hugin/adapters/hh_browser.py" = ["RUF001"]
"src/hugin/adapters/yandex_ai.py" = ["RUF001"]
"src/hugin/adapters/yandex_credentials.py" = ["RUF001"]
"src/hugin/hh_cli.py" = ["RUF001"]
"src/hugin/cover_letter_cli.py" = ["RUF001"]
"src/hugin/resume_cli.py" = ["RUF001"]
"src/hugin/resume_improvement_cli.py" = ["RUF001"]
"src/hugin/services/resume_improvement.py" = ["RUF001"]
"src/hugin/services/resume_prompts.py" = ["RUF001"]
"src/hugin/services/resume_profile.py" = ["RUF001"]
"src/hugin/services/career_directions.py" = ["RUF001"]
"src/hugin/services/cover_letter.py" = ["RUF001"]
"src/hugin/services/vacancy_analysis.py" = ["RUF001"]
"src/hugin/services/vacancy_duplicates.py" = ["RUF001"]
"src/hugin/services/vacancy_review.py" = ["RUF001"]
"tests/unit/test_resume_*.py" = ["RUF001"]
"tests/unit/test_hh_browser.py" = ["RUF001"]
"tests/unit/test_cover_letter.py" = ["RUF001"]
"tests/unit/test_cover_letter_cli.py" = ["RUF001"]
"tests/unit/test_vacancy_*.py" = ["RUF001"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
markers = [
    "integration: проверки с настоящими местными зависимостями",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hugin"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
show_error_codes = true
pretty = true
warn_unused_ignores = true
